--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "yargs": "^12.0.1"
   }
 }
